Add link-back to issues

--- a/src/app/pages/issues/elections/elections.html
+++ b/src/app/pages/issues/elections/elections.html
@@ -91,5 +91,7 @@
             ballot to registered voters in advance. Sending a real ballot instead would require little
             effort, but have a huge impact on voter participation.
         </p>
+
+        <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
 </template>
