--- a/src/app/pages/issues/environmental/environmental.html
+++ b/src/app/pages/issues/environmental/environmental.html
@@ -25,5 +25,7 @@
                 </a>
             </li>
         </ul>
+
+        <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
 </template>
