--- a/src/app/pages/issues/justice/justice.html
+++ b/src/app/pages/issues/justice/justice.html
@@ -8,5 +8,7 @@
             Peelian Principles
             Make Parallel Construction illegal
         </p>
+
+        <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
 </template>
