--- a/src/app/pages/issues/ubi/ubi.html
+++ b/src/app/pages/issues/ubi/ubi.html
@@ -62,5 +62,7 @@
         </p>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/exdR6lhN4bk" frameborder="0" allowfullscreen></iframe>
+
+        <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
 </template>
