--- a/src/app/pages/issues/children/children.html
+++ b/src/app/pages/issues/children/children.html
@@ -18,5 +18,7 @@
                 </a>
             </li>
         </ul>
+
+        <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
 </template>
