--- a/src/app/pages/issues/fracking/fracking.html
+++ b/src/app/pages/issues/fracking/fracking.html
@@ -6,5 +6,7 @@
         <p>
             Coming Soon...
         </p>
+
+        <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
 </template>
