--- a/src/app/pages/issues/government/government.html
+++ b/src/app/pages/issues/government/government.html
@@ -39,5 +39,7 @@
                 </a>
             </li>
         </ul>
+
+        <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
 </template>
