--- a/src/app/pages/issues/opengov/opengov.html
+++ b/src/app/pages/issues/opengov/opengov.html
@@ -8,5 +8,7 @@
         </p>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/5tu32CCA_Ig" frameborder="0" allowfullscreen></iframe>
+
+        <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
 </template>
