--- a/src/app/pages/issues/policy/policy.html
+++ b/src/app/pages/issues/policy/policy.html
@@ -8,5 +8,7 @@
         </p>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/MvC6kwU3zgA" frameborder="0" allowfullscreen></iframe>
+
+        <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
 </template>
