Add 'other' field to Join form

--- a/src/app/pages/join/join.html
+++ b/src/app/pages/join/join.html
@@ -47,6 +47,9 @@
                         <input type="checkbox" name="organize">Recruit & Organize
                     </label>
                 </fieldset>
+                <label class="wrap"><span class="label">What else should we know?</span>
+                    <textarea name="other" rows="8"></textarea>
+                </label>
                 <if condition="model.error">
                     <span class="error">{model.error}</span>
                 </if>
