--- a/src/styles/components/forms.scss
+++ b/src/styles/components/forms.scss
@@ -9,6 +9,14 @@ label {
     font-size: 1.1em;
     margin-top: 1em;
 
+    &.wrap {
+        flex-wrap: wrap;
+
+        > .label {
+            flex: 1 0 100%;
+        }
+    }
+
     > .label {
         flex: 0 0 12rem;
     }
@@ -83,4 +91,8 @@ input {
 
 [type="submit"] {
     margin-top: 3rem;
+}
+
+textarea {
+    width: 100%;
 }
