Increase banner usage variety

--- a/src/app/pages/issues/women/women.scss
+++ b/src/app/pages/issues/women/women.scss
@@ -5,6 +5,6 @@
     margin-bottom: 6rem;
 
     > .banner {
-        background-image: url('/images/banners/bench.jpg');
+        background-image: url('/images/banners/womens-rights.jpg');
     }
 }
