--- a/src/app/pages/issues/environmental/environmental.scss
+++ b/src/app/pages/issues/environmental/environmental.scss
@@ -6,6 +6,6 @@
     text-align: center;
 
     > .banner {
-        background-image: url('/images/banners/bench.jpg');
+        background-image: url('/images/banners/environment.jpg');
     }
 }
