--- a/src/app/pages/issues/fracking/fracking.scss
+++ b/src/app/pages/issues/fracking/fracking.scss
@@ -5,6 +5,6 @@
     margin-bottom: 6rem;
 
     > .banner {
-        background-image: url('/images/banners/bench.jpg');
+        background-image: url('/images/banners/environment.jpg');
     }
 }
