Create special blockquote issue style

--- a/src/app/pages/issues/elections/elections.html
+++ b/src/app/pages/issues/elections/elections.html
@@ -3,7 +3,7 @@
     <article>
         <h1>Modern Elections</h1>
 
-        <blockquote>
+        <blockquote class="issue">
             No individual raindrop ever considers itself responsible for the flood.<br>
             — Unknown
         </blockquote>
