--- a/src/app/pages/issues/gerrymandering/gerrymandering.html
+++ b/src/app/pages/issues/gerrymandering/gerrymandering.html
@@ -3,7 +3,7 @@
     <article>
         <h1>End Gerrymandering</h1>
 
-        <blockquote>
+        <blockquote class="issue">
             In America, politicians should not pick their voters; voters should pick their politicians.<br>
             — President Barack Obama
         </blockquote>
