--- a/src/styles/components/blockquotes.scss
+++ b/src/styles/components/blockquotes.scss
@@ -9,6 +9,10 @@ blockquote {
     quotes: '“' '”' '‘' '’';
     text-align: justify;
 
+    &.issue {
+        text-align: center;
+    }
+
     &::after,
     &::before {
         color: rgba(color(black), 0.1);
