Add 'Q' to 'LGBTQ'

--- a/src/app/pages/issues/issues.html
+++ b/src/app/pages/issues/issues.html
@@ -115,8 +115,8 @@
 
             <li>
                 <a href="/issues/lgbt">
-                    <h2>LGBT Rights</h2>
-                    <img src="/images/issues/icons/rainbow.svg" alt="LGBT Rights" width="170" height="170">
+                    <h2>LGBTQ Rights</h2>
+                    <img src="/images/issues/icons/rainbow.svg" alt="LGBTQ Rights" width="170" height="170">
                 </a>
             </li>
 
