Add copy to LGBTQ Rights page

--- a/src/app/pages/issues/lgbt/lgbt.html
+++ b/src/app/pages/issues/lgbt/lgbt.html
@@ -1,10 +1,30 @@
 <template args="model">
     <div class="banner curved-bottom"></div>
     <article>
-        <h1>LGBT Rights</h1>
+        <h1>LGBTQ Rights</h1>
+
+        <blockquote class="issue">
+            Somebody, your father or mine, should have told us that not many people have ever died of love.
+            But multitudes have perished, and are perishing every hour — and in the oddest places! —
+            for the lack of it.<br>
+            — James Baldwin
+        </blockquote>
 
         <p>
-            Coming Soon...
+            The LGBTQ community in Maryland has recently won several new important rights, including
+            the right to marry and the right to be free from gender identity discrimination
+            in employment, housing, and public accommodations.
+        </p>
+
+        <p>
+            However, much work still remains to secure those rights. LGBTQ Marylanders still face
+            discrimination in health care, housing, employment, and public accommodations, and
+            LGBTQ youth continue to face discrimination and harassment in schools and in foster care.
+        </p>
+
+        <p>
+            I will always fight to ensure full equality in all aspects of life for all Marylanders,
+            regardless of sexual orientation or gender identity.
         </p>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
