Move video from UBI to Minimum Wage

--- a/src/app/pages/issues/minimum-wage/minimum-wage.html
+++ b/src/app/pages/issues/minimum-wage/minimum-wage.html
@@ -7,6 +7,10 @@
             Coming Soon...
         </p>
 
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/QPKKQnijnsM" frameborder="0" allowfullscreen></iframe>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/exdR6lhN4bk" frameborder="0" allowfullscreen></iframe>
+
         <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
 </template>
