--- a/src/app/pages/issues/ubi/ubi.html
+++ b/src/app/pages/issues/ubi/ubi.html
@@ -1,7 +1,7 @@
 <template args="model">
     <div class="banner curved-bottom"></div>
     <article>
-        <h1>Citizen's Wage</h1>
+        <h1>Universal Basic Income</h1>
 
         <p>
             Many names have been given to the idea — Universal Basic Income, Negative Income Tax, Citizen's Wage — the idea is not a new one, but it is an idea whose time has come.
@@ -60,8 +60,6 @@
         <p>
             As the wealthiest State in the Union, I believe Maryland can and should be a leader in researching and implementing such a solution.
         </p>
-
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/exdR6lhN4bk" frameborder="0" allowfullscreen></iframe>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
