Add copy to Minimum Wage issue

--- a/src/app/pages/issues/minimum-wage/minimum-wage.html
+++ b/src/app/pages/issues/minimum-wage/minimum-wage.html
@@ -4,12 +4,31 @@
         <h1>Minimum Wage</h1>
 
         <p>
-            Coming Soon...
+            Maryland's minimum wage will reach $10.10 an hour in July 2018 — an
+            improvement over the $8.25 it was in 2016, but still far short of
+            a real livable wage.
+        </p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/exdR6lhN4bk" frameborder="0" allowfullscreen></iframe>
+
+        <p>
+            We live in the richest State in the Union, yet about 200,000 children in our
+            State still live below the poverty line, while income inequality has been
+            <a href="http://www.cbpp.org/sites/default/files/atoms/files/Maryland.pdf">getting worse since the 1970s</a>
         </p>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/QPKKQnijnsM" frameborder="0" allowfullscreen></iframe>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/exdR6lhN4bk" frameborder="0" allowfullscreen></iframe>
+        <p>
+            We need to start by raising the minimum wage to $15 an hour, but we also can't stop
+            there and allow the minimum wage to stagnate for another 30 years.
+        </p>
+
+        <p>
+            After bringing the minimum wage up to a real living wage, it should be indexed
+            to inflation so that workers' real purchasing power is never again subjected to
+            decades of decline.
+        </p>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
