Make YouTube videos responsive

--- a/src/app/pages/issues/elections/elections.html
+++ b/src/app/pages/issues/elections/elections.html
@@ -67,7 +67,11 @@
             election results.
         </p>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/CUH7pJjoWrY" frameborder="0" allowfullscreen></iframe>
+        <div class="youtube-video-wrapper">
+            <div class="youtube-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/CUH7pJjoWrY" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
 
         <p>
             As one of the wealthiest and most technologically advanced States in the Union, Maryland should be
