--- a/src/app/pages/issues/minimum-wage/minimum-wage.html
+++ b/src/app/pages/issues/minimum-wage/minimum-wage.html
@@ -9,7 +9,11 @@
             a real livable wage.
         </p>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/exdR6lhN4bk" frameborder="0" allowfullscreen></iframe>
+        <div class="youtube-video-wrapper">
+            <div class="youtube-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/exdR6lhN4bk" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
 
         <p>
             We live in the richest State in the Union, yet about 200,000 children in our
@@ -17,7 +21,11 @@
             <a href="http://www.cbpp.org/sites/default/files/atoms/files/Maryland.pdf">getting worse since the 1970s</a>
         </p>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/QPKKQnijnsM" frameborder="0" allowfullscreen></iframe>
+        <div class="youtube-video-wrapper">
+            <div class="youtube-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/QPKKQnijnsM" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
 
         <p>
             We need to start by raising the minimum wage to $15 an hour, but we also can't stop
