--- a/src/app/pages/issues/opengov/opengov.html
+++ b/src/app/pages/issues/opengov/opengov.html
@@ -3,11 +3,20 @@
     <article>
         <h1>Open Government</h1>
 
+        <blockquote class="issue">
+            Sunlight is the best disinfectant.<br>
+            — William O. Douglas
+        </blockquote>
+
         <p>
             Open Government...
         </p>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/5tu32CCA_Ig" frameborder="0" allowfullscreen></iframe>
+        <div class="youtube-video-wrapper">
+            <div class="youtube-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5tu32CCA_Ig" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
