--- a/src/app/pages/issues/ubi/ubi.html
+++ b/src/app/pages/issues/ubi/ubi.html
@@ -29,7 +29,11 @@
             </p>
         </blockquote>
 
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/BY1OKSObkH0" frameborder="0" allowfullscreen></iframe>
+        <div class="youtube-video-wrapper">
+            <div class="youtube-video">
+                <iframe width="420" height="315" src="https://www.youtube.com/embed/BY1OKSObkH0" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
 
         <p>
             The idea of a Universal Basic Income has been endorsed by numerous Nobel laureates in Economics, including Milton Friedman, Paul Samuelson, and James Tobin, as well as a veritable army of other well-respected economists. It's an idea that has seen support across the <a href="http://www.theatlantic.com/politics/archive/2014/08/why-arent-reformicons-pushing-a-guaranteed-basic-income/375600/">political</a> and <a href="http://www.wsj.com/articles/a-guaranteed-income-for-every-american-1464969586">ideological</a> spectrum, famously <a href="https://www.jacobinmag.com/2016/05/richard-nixon-ubi-basic-income-welfare/">nearly becoming a reality under President Richard Nixon</a>.
@@ -51,7 +55,11 @@
             And as technology continues to reduce the labor requirements for jobs across all sectors of our economy and we find ourselves with more and more people not participating in the job market, even as we continue to produce more and more wealth, the numbers above are likely to only get worse.
         </p>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/YFhismScVq4" frameborder="0" allowfullscreen></iframe>
+        <div class="youtube-video-wrapper">
+            <div class="youtube-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/YFhismScVq4" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
 
         <p>
             We can do better, and we must do better. It is both a moral imperative and simply good economic and political sense to invest now in finding <a href="/issues/policy">scientifically proven methods</a> of eliminating poverty and protecting Americans from market disruptions due to technological advancement.
