--- a/src/app/pages/issues/policy/policy.html
+++ b/src/app/pages/issues/policy/policy.html
@@ -7,7 +7,11 @@
             Evidence-based Policies...
         </p>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/MvC6kwU3zgA" frameborder="0" allowfullscreen></iframe>
+        <div class="youtube-video-wrapper">
+            <div class="youtube-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/MvC6kwU3zgA" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
