--- a/src/app/pages/issues/elections/elections.html
+++ b/src/app/pages/issues/elections/elections.html
@@ -48,6 +48,22 @@
             they may be registered.
         </p>
 
+        <h2>Instant-Runoff Voting</h2>
+
+        <p>
+            <a href="https://en.wikipedia.org/wiki/Instant-runoff_voting">Instant-runoff</a> or <a ref="http://www.fairvote.org/rcv#rcvbenefits">Ranked Choice Voting</a> is one of the most widely supported
+            improvements to our electoral system you've probably never heard of. The concept is simple:
+            just put your choices for any election in rank order (or only vote for one person if you prefer),
+            and your vote will automatically be counted for the most viable candidate you support.
+            See how it works in the video below.
+        </p>
+
+        <div class="youtube-video-wrapper">
+            <div class="youtube-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/3Y3jE3B8HsE" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+
         <h2>Blockchain Voting</h2>
 
         <p>
