--- a/src/app/pages/issues/corruption/corruption.html
+++ b/src/app/pages/issues/corruption/corruption.html
@@ -7,6 +7,12 @@
             Coming Soon...
         </p>
 
+        <div class="youtube-video-wrapper">
+            <div class="youtube-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5tu32CCA_Ig" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+
         <a href="/issues" class="back-to-issues">See other issues</a>
     </article>
 </template>
