Update home page copy

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -99,7 +99,7 @@
 
             <p>
                 Do you know that your <a href="/map">District 32</a> State representatives
-                have voted consistently against women's rights?
+                have voted consistently <em>against</em> women's rights?
             </p>
 
             <p>
@@ -115,12 +115,12 @@
             </p>
 
             <p>
-                Do you know that Ted Sophocleus is endorsed by the NRA and voted against
+                Do you know that Ted Sophocleus is <em>endorsed by the NRA</em> and voted against
                 legislation to prohibit firearms on college campuses?
             </p>
 
             <p>
-                Do you know that Pam Beidle voted against guaranteed paid sick leave?
+                Do you know that Pam Beidle voted <em>against</em> guaranteed paid sick leave?
             </p>
 
             <p>
@@ -139,12 +139,12 @@
             </p>
 
             <p>
-                I will always fight for our friends, families, neighbors, and community.<br>
+                I am running because I will always fight for our friends, families, neighbors, and community.<br>
                 I will fight to make our government work for the people, not around them.<br>
                 I will fight for a free and open society where all children are given
                 the opportunity to realize their dreams, where our environment and future
                 is protected, and where all people are given the same respect and opportunity,
-                regardless of their race, ethnicity, gender, or sexual orientation.
+                regardless of their race, ethnicity, gender, sexual orientation, or gender identity.
             </p>
             <p>
                 But I can't do it alone. Only together can we bring about real change.
