Add mailto link to e-mail address

--- a/src/app/pages/privacy/privacy.html
+++ b/src/app/pages/privacy/privacy.html
@@ -216,6 +216,6 @@
 
         <h2>How to contact us</h2>
 
-        <p>Questions regarding this Privacy Policy can be directed to info@derekkent.com.</p>
+        <p>Questions regarding this Privacy Policy can be directed to <a href="mailto:info@derekkent.com?subject=Accessibility Question">info@derekkent.com</a>.</p>
     </article>
 </template>
