Add Open Government copy

--- a/src/app/pages/issues/opengov/opengov.html
+++ b/src/app/pages/issues/opengov/opengov.html
@@ -9,7 +9,54 @@
         </blockquote>
 
         <p>
-            Open Government...
+            Transparency is a popular buzzword in politics today, but for all the
+            emphasis it receives, we still seem to have <a href="/issues/corruption">as
+            little say</a> in the legislative process as ever before.
+        </p>
+
+        <p>
+            We can do much better.
+        </p>
+
+        <h2>Direct Feedback on Issues that Matter</h2>
+
+        <p>
+            Advances in technology and mass communication now allow us to follow
+            in real-time events from halfway around the world, yet our ability
+            to connect with our own Local and State Representatives remains as
+            anachronistic as it was half a century ago.
+        </p>
+
+        <p>
+            It's time to start leveraging technology to change how we interact
+            with Government and with our elected officials to start making it
+            work for us, instead of around us.
+        </p>
+
+        <p>
+            I will work with Open Government initiatives and new technological
+            initiatives like <a href="http://opengovfoundation.org/projects/madison-project/">The Madison Project</a> to allow every citizen to engage their government every day, and express
+            nuanced concerns and opinions not simply on a ballot once every two or four years.
+        </p>
+
+        <div class="youtube-video-wrapper">
+            <div class="youtube-video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/69pPKZeKC8U" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+
+        <h2>Open Meetings — Not Secret Ones</h2>
+
+        <p>
+            Some Legislatures claim to be open and publish their calendars, but there's
+            invariably large holes in their schedules that are filled with calls to
+            donors and meetings with lobbyists.
+        </p>
+
+        <p>
+            I will spend my time working for the people I represent — not to attract
+            big donors. Furthermore, <strong>any and all meetings I have with registered lobbyists
+            will be recorded in full and released to the public.</strong>
         </p>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
