--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -60,6 +60,10 @@ body {
     box-sizing: border-box;
 }
 
+main {
+    display: block;
+}
+
 a {
     color: color(links);
     text-decoration: none;
