Fix wording on gerrymandering copy

--- a/src/app/pages/issues/gerrymandering/gerrymandering.html
+++ b/src/app/pages/issues/gerrymandering/gerrymandering.html
@@ -23,8 +23,8 @@
 
         <p>
             Nationally, gerrymandering was used to devastating effect by the Republican Party in 2010,
-            allowing them unending control of the House of Representatives, even in multiple elections
-            Democrats received substantially more votes.
+            allowing them unending control of the House of Representatives, even though Democrats
+            received more votes in multiple elections since.
         </p>
 
         <p>
