Fix grammar issue on OpenGov

--- a/src/app/pages/issues/opengov/opengov.html
+++ b/src/app/pages/issues/opengov/opengov.html
@@ -48,7 +48,7 @@
         <h2>Open Meetings — Not Secret Ones</h2>
 
         <p>
-            Some Legislatures claim to be open and publish their calendars, but there's
+            Some Legislators claim to be open and publish their calendars, but there's
             invariably large holes in their schedules that are filled with calls to
             donors and meetings with lobbyists.
         </p>
