Re-word OpenGov copy

--- a/src/app/pages/issues/opengov/opengov.html
+++ b/src/app/pages/issues/opengov/opengov.html
@@ -35,8 +35,8 @@
 
         <p>
             I will work with Open Government initiatives and new technological
-            initiatives like <a href="http://opengovfoundation.org/projects/madison-project/">The Madison Project</a> to allow every citizen to engage their government every day, and express
-            nuanced concerns and opinions not simply on a ballot once every two or four years.
+            initiatives like <a href="http://opengovfoundation.org/projects/madison-project/">The Madison Project</a> to allow every citizen to engage with their government and express nuanced
+            concerns and opinions every day — not just on a ballot once every two or four years.
         </p>
 
         <div class="youtube-video-wrapper">
