Fix typo on about page

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -28,7 +28,7 @@
 
         <p>
             In the aftermath of 9/11, Derek suspended his college education to enlist in the US Army.
-            He served honorably in Kuwait and Iraq as a solider, even while speaking out against
+            He served honorably in Kuwait and Iraq as a soldier, even while speaking out against
             the war in his capacity as a private citizen. He later attended the United States Military
             Academy at West Point and Syracuse University and holds a degree in International Relations
             and Chinese Language.
