--- a/src/app/pages/issues/gerrymandering/gerrymandering.html
+++ b/src/app/pages/issues/gerrymandering/gerrymandering.html
@@ -55,7 +55,7 @@
             The Legislature would delegate redistricting to the nonpartisan <a href="http://dls.state.md.us">
             Department of Legislative Services</a>, which would be instructed to draw district lines taking into
             account only population and following as closely as possible existing county and city borders.
-            The Generaly Assembly would then give the plan an up or down vote with no modifications allowed.
+            The Generaly Assembly would then give the plan an up or down vote, with no modifications allowed.
         </p>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
