Remove duplicate alt text

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -51,42 +51,42 @@
             <li>
                 <a href="/issues/government">
                     <h2>Make Government Work for Us</h2>
-                    <img src="/images/issues/icons/opengov.svg" alt="Make Government work for us" width="150" height="150">
+                    <img src="/images/issues/icons/opengov.svg" alt="" width="150" height="150">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/justice">
                     <h2>Reform Our Criminal Justice System</h2>
-                    <img src="/images/issues/icons/fist.svg" alt="Reform our criminal justice system" width="150" height="150">
+                    <img src="/images/issues/icons/fist.svg" alt="" width="150" height="150">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/wages">
                     <h2>Ensure a Living Wage for all Workers</h2>
-                    <img src="/images/issues/icons/dollar.svg" alt="Fight for a $15 minimum wage" width="150" height="150">
+                    <img src="/images/issues/icons/dollar.svg" alt="" width="150" height="150">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/children">
                     <h2>Give Our Children a Brighter Future</h2>
-                    <img src="/images/issues/icons/education.svg" alt="Improve our children's education and care" width="150" height="150">
+                    <img src="/images/issues/icons/education.svg" alt="" width="150" height="150">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/equality">
                     <h2>Create a More Just Society for Everyone</h2>
-                    <img src="/images/issues/icons/equality.svg" alt="Create a more just society" width="150" height="150">
+                    <img src="/images/issues/icons/equality.svg" alt="" width="150" height="150">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/environmental">
                     <h2>Protect Our Environment</h2>
-                    <img src="/images/issues/icons/nature.svg" alt="Protect Our Environment" width="150" height="150">
+                    <img src="/images/issues/icons/nature.svg" alt="" width="150" height="150">
                 </a>
             </li>
         </ul>
