--- a/src/app/pages/issues/government/government.html
+++ b/src/app/pages/issues/government/government.html
@@ -7,35 +7,35 @@
             <li>
                 <a href="/issues/policy">
                     <h2>Evidence-based Policies</h2>
-                    <img src="/images/issues/icons/chart.svg" alt="Promote forward-looking policies backed by rigorous scientific evidence" width="170" height="170">
+                    <img src="/images/issues/icons/chart.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/gerrymandering">
                     <h2>Gerrymandering</h2>
-                    <img src="/images/issues/icons/gerrymandering.svg" alt="Gerrymandering" width="170" height="170">
+                    <img src="/images/issues/icons/gerrymandering.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/elections">
                     <h2>Modern Elections</h2>
-                    <img src="/images/issues/icons/poll.svg" alt="Free and fair elections for the 21st Century" width="170" height="170">
+                    <img src="/images/issues/icons/poll.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/corruption">
                     <h2>Money in Politics</h2>
-                    <img src="/images/issues/icons/money.svg" alt="Money in Politics" width="170" height="170">
+                    <img src="/images/issues/icons/money.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/opengov">
                     <h2>Open Government</h2>
-                    <img src="/images/issues/icons/opengov.svg" alt="Transparent, responsive Government" width="170" height="170">
+                    <img src="/images/issues/icons/opengov.svg" alt="" width="170" height="170">
                 </a>
             </li>
         </ul>
