--- a/src/app/pages/issues/issues.html
+++ b/src/app/pages/issues/issues.html
@@ -53,126 +53,126 @@
             <li>
                 <a href="/issues/energy">
                     <h2>Clean Energy</h2>
-                    <img src="/images/issues/icons/sun.svg" alt="Clean Energy" width="170" height="170">
+                    <img src="/images/issues/icons/sun.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/consumers">
                     <h2>Consumer Protection</h2>
-                    <img src="/images/issues/icons/shopping.svg" alt="Consumer Protection" width="170" height="170">
+                    <img src="/images/issues/icons/shopping.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/education">
                     <h2>Education</h2>
-                    <img src="/images/issues/icons/education.svg" alt="Education" width="170" height="170">
+                    <img src="/images/issues/icons/education.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/environment">
                     <h2>Environment</h2>
-                    <img src="/images/issues/icons/nature.svg" alt="Environment" width="170" height="170">
+                    <img src="/images/issues/icons/nature.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/family">
                     <h2>Family Care</h2>
-                    <img src="/images/issues/icons/stroller.svg" alt="Family Care" width="170" height="170">
+                    <img src="/images/issues/icons/stroller.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/fracking">
                     <h2>Fracking</h2>
-                    <img src="/images/issues/icons/save-water.svg" alt="Fracking" width="170" height="170">
+                    <img src="/images/issues/icons/save-water.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/gerrymandering">
                     <h2>Gerrymandering</h2>
-                    <img src="/images/issues/icons/gerrymandering.svg" alt="Gerrymandering" width="170" height="170">
+                    <img src="/images/issues/icons/gerrymandering.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/guns">
                     <h2>Gun Control</h2>
-                    <img src="/images/issues/icons/gun.svg" alt="Gun Control" width="170" height="170">
+                    <img src="/images/issues/icons/gun.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/infrastructure">
                     <h2>Infrastructure</h2>
-                    <img src="/images/issues/icons/train.svg" alt="Infrastructure" width="170" height="170">
+                    <img src="/images/issues/icons/train.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/lgbt">
                     <h2>LGBTQ Rights</h2>
-                    <img src="/images/issues/icons/rainbow.svg" alt="LGBTQ Rights" width="170" height="170">
+                    <img src="/images/issues/icons/rainbow.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/marijuana">
                     <h2>Marijuana</h2>
-                    <img src="/images/issues/icons/marijuana.svg" alt="Marijuana" width="170" height="170">
+                    <img src="/images/issues/icons/marijuana.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/minimum-wage">
                     <h2>Minimum Wage</h2>
-                    <img src="/images/issues/icons/dollar.svg" alt="Minimum Wage" width="170" height="170">
+                    <img src="/images/issues/icons/dollar.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/corruption">
                     <h2>Money in Politics</h2>
-                    <img src="/images/issues/icons/money.svg" alt="Money in Politics" width="170" height="170">
+                    <img src="/images/issues/icons/money.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/privacy">
                     <h2>Privacy</h2>
-                    <img src="/images/issues/icons/fingerprint.svg" alt="Privacy" width="170" height="170">
+                    <img src="/images/issues/icons/fingerprint.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/religion">
                     <h2>Religious Freedom</h2>
-                    <img src="/images/issues/icons/human.svg" alt="Religious Freedom" width="170" height="170">
+                    <img src="/images/issues/icons/human.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/taxes">
                     <h2>Taxes</h2>
-                    <img src="/images/issues/icons/bank.svg" alt="Taxes" width="170" height="170">
+                    <img src="/images/issues/icons/bank.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/technology">
                     <h2>Technology</h2>
-                    <img src="/images/issues/icons/devices.svg" alt="Technology" width="170" height="170">
+                    <img src="/images/issues/icons/devices.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/women">
                     <h2>Women's Rights</h2>
-                    <img src="/images/issues/icons/venus.svg" alt="Women's Rights" width="170" height="170">
+                    <img src="/images/issues/icons/venus.svg" alt="" width="170" height="170">
                 </a>
             </li>
         </ul>
