--- a/src/app/pages/issues/environmental/environmental.html
+++ b/src/app/pages/issues/environmental/environmental.html
@@ -7,21 +7,21 @@
             <li>
                 <a href="/issues/energy">
                     <h2>Clean Energy</h2>
-                    <img src="/images/issues/icons/sun.svg" alt="Clean Energy" width="170" height="170">
+                    <img src="/images/issues/icons/sun.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/environment">
                     <h2>Environment</h2>
-                    <img src="/images/issues/icons/nature.svg" alt="Environment" width="170" height="170">
+                    <img src="/images/issues/icons/nature.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/fracking">
                     <h2>Fracking</h2>
-                    <img src="/images/issues/icons/save-water.svg" alt="Fracking" width="170" height="170">
+                    <img src="/images/issues/icons/save-water.svg" alt="" width="170" height="170">
                 </a>
             </li>
         </ul>
