--- a/src/app/pages/issues/wages/wages.html
+++ b/src/app/pages/issues/wages/wages.html
@@ -7,21 +7,21 @@
             <li>
                 <a href="/issues/ubi">
                     <h2>End Poverty</h2>
-                    <img src="/images/issues/icons/star.svg" alt="End poverty in America in our lifetime" width="170" height="170">
+                    <img src="/images/issues/icons/star.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/minimum-wage">
                     <h2>Minimum Wage</h2>
-                    <img src="/images/issues/icons/dollar.svg" alt="Minimum Wage" width="170" height="170">
+                    <img src="/images/issues/icons/dollar.svg" alt="" width="170" height="170">
                 </a>
             </li>
 
             <li>
                 <a href="/issues/taxes">
                     <h2>Taxes</h2>
-                    <img src="/images/issues/icons/bank.svg" alt="Taxes" width="170" height="170">
+                    <img src="/images/issues/icons/bank.svg" alt="" width="170" height="170">
                 </a>
             </li>
         </ul>
