Add Press Release
Derek Kent Elected to District 32 Executive Board

--- a/src/app/pages/news/news.html
+++ b/src/app/pages/news/news.html
@@ -1,8 +1,37 @@
 <template args="level">
     <div class="banner curved-bottom"></div>
     <article>
-        <h1>Press Releases</h1>
+        <h1>News</h1>
 
-        <p>Stay tuned!</p>
+        <article class="press-release">
+            <h2>Derek Kent Elected to District 32 Executive Board</h2>
+            <time datetime="2016-11-17">Nov. 17, 2016</time>
+
+            <p>
+                <span class="location"><span class="city">Ferndale</span>, Md.</span> –
+                Derek Kent on Thursday was one of 13 people nominated and elected to
+                the District 32 Democratic Executive Board.
+            </p>
+
+            <p>
+                Kent spoke after his election about the need for Democrats to reconnect
+                with their base.
+            </p>
+
+            <p>
+                “The election of Donald Trump has been a shock to people around
+                the country and around the world, and has shown that Democrats cannot
+                continue to pander to corporations and large donors at the expense
+                of hard-working Americans, nor can we take for granted the support
+                of laborers, unions, and young voters,” Kent said. “We must reconnect
+                to voters with bold policies that give them something to vote for,
+                not just against.”
+            </p>
+
+            <p>
+                Kent is also running to represent District 32 in Maryland's House of
+                Delegates in 2018.
+            </p>
+        </article>
     </article>
 </template>
